# tombolo-py

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: lint.yml
docs/: index.html  search.js  tombolo.html
docs/tombolo/: plots.html
docs/tombolo/plots/: convergence_table.html  forest_plot.html  heterogeneity_table.html  league_table.html  prediction_table.html  ranking_plot.html
tombolo/: __init__.py  _utils.py  plots.py  run.py
tombolo/methods/: bnma.py  nma.py  run.py
tombolo/plots/: __init__.py  convergence_table.py  forest_plot.py  heterogeneity_table.py  league_table.py  prediction_table.py  ranking_plot.py
tombolo/plots/primitives/: barh.py  forest.py  grid.py  table.py  utils.py
